<resources>
    <string name="app_name">LocationBasedDiary</string>
    <string name="LBDTitle">Location Based Diary</string>
    <string name="LoginLabel">Login</string>
    <string name="LoginLabel_email">Email:</string>
    <string name="LoginLabel_password">Password:</string>
    <string name="LoginLabel_forgottenPassword">Forgotten Password?</string>
    <string name="LoginLabel_register">Register</string>
    <string name="LoginLabel_resetPass">Reset Password</string>
    <string name="LoginLabel_logout">Logout</string>
    <string name="start_location_services">Start Location Services</string>
    <string name="terminate_location_services">Terminate Location Services</string>
    <string name="add_task_button_toolbar">Add Task</string>
    <string name="chooseTask">Please select a category for your task</string>
    <string name="firestore_error">Error Retrieving Data from Firestore!</string>
    <string name="return_to_menu">Return to Menu</string>
    <string name="activity_in_vehicle">IN VEHICLE</string>
    <string name="activity_on_bicycle">ON BICYCLE</string>
    <string name="activity_on_foot">ON FOOT</string>
    <string name="activity_running">RUNNING</string>
    <string name="activity_walking">WALKING</string>
    <string name="activity_unknown">UNKNOWN</string>
    <string name="activity_still">STILL</string>
    <string name="activity_tilting">TILTING</string>
    <string name="switch_url_button_toolbar">Switch PostgREST Function</string>
</resources>